<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/new_life_gradient"
    tools:context=".Dashboard">

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="92dp"
        android:layout_marginLeft="92dp"
        android:layout_marginTop="66dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textStyle="bold"
        android:background="@null"
        android:focusable="false"
        android:textSize="32dp"
        android:text="@string/welcome" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="203dp"
        android:text="@string/StartNewList"
        app:backgroundTint="#3F8F8B" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/PreviousLists"
        app:backgroundTint="#3F8F8B" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="118dp"
        android:text="@string/Exit"
        app:backgroundTint="#3F8F8B" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="73dp"
        android:layout_height="82dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="31dp"
        android:layout_marginLeft="31dp"
        android:layout_marginTop="185dp"
        app:srcCompat="@drawable/carticon" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="81dp"
        android:layout_height="119dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="43dp"
        android:layout_marginLeft="43dp"
        android:layout_marginBottom="84dp"
        app:srcCompat="@drawable/backicon" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="82dp"
        android:layout_height="77dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="37dp"
        android:layout_marginLeft="37dp"
        android:layout_marginBottom="327dp"
        app:srcCompat="@drawable/listicon" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="226dp"
        android:text="@string/Map"
        app:backgroundTint="#3F8F8B" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="130dp"
        android:layout_height="112dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="198dp"
        app:srcCompat="@drawable/mapicon"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="30dp" />

    <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="-4dp"
        android:layout_marginEnd="0dp"
        android:text="@string/logout" />

</RelativeLayout>
