<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/summer_games_background"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="312dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/logo_transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/username"
        android:layout_width="245dp"
        android:layout_height="64dp"
        android:background="@drawable/input_boxes"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="Email: "
        android:inputType="textEmailAddress"
        android:outlineAmbientShadowColor="@color/black"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <EditText
        android:id="@+id/password"
        android:layout_width="245dp"
        android:layout_height="64dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/input_boxes"
        android:ems="10"
        android:hint="Password: "
        android:inputType="textPassword"
        android:outlineAmbientShadowColor="@color/black"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/login"
        android:layout_width="102dp"
        android:layout_height="40dp"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:background="@color/black"
        android:text="@string/login"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.57" />

    <Button
        android:id="@+id/signup"
        android:layout_width="102dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@color/black"
        android:text="@string/signup"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.346"
        app:layout_constraintStart_toEndOf="@+id/login"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="197dp"
        android:layout_height="43dp"
        android:layout_marginTop="100dp"
        android:text="@string/or_separator"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <Button
        android:id="@+id/withoutAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/continue_without_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.519"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.333" />



</androidx.constraintlayout.widget.ConstraintLayout>
